added categories as per http://www.ewal.net/2012/09/08/octopress-customizations/

--- a/source/bgps/index.html
+++ b/source/bgps/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="blog-index">
-  {% for post in paginator.posts.bgps %}
+  {% for post in categories.posts.bgps %}
     {% include post/variables.html %}
     <article {% if linklog %}class="linklog"{% endif %}>
       {% include article.html %}
