--- a/source/bgps/index.html
+++ b/source/bgps/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="blog-index">
-  {% for post in categories.posts.bgps %}
+  {% for post in site.categories.bgps limit: site.recent_posts %}
     {% include post/variables.html %}
     <article {% if linklog %}class="linklog"{% endif %}>
       {% include article.html %}
